--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        blender-version: ['4.2', '4.3', '4.4', '4.5']
+        blender-version: ['4.0', '4.1', 4.2', '4.3', '4.4', '4.5']
 
     steps:
       - name: Checkout code
